# investment_signal

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: pages.yml
content/journal/: 2026-05-06-sample-entry.md
content/macro/: 2026-05-06-dollar-liquidity-sample.md
content/research/: nvda-sample-research-note.md
content/strategy/: tradingview-alert-policy.md
data/samples/: tradingview_alert_btc_breakout.json  tradingview_alert_eth_breakout.json  tradingview_alert_invalid_secret.json  tradingview_alert_level1.json  (+3 more)
docs/: architecture.md  mission.md  operations-runbook.md  roadmap.md  tradingview-alert-templates.md  tradingview-setup.md  v2-fastapi-webhook.md
scripts/: build_site.py  check_public_output.py  check_tradingview_catalog.py  generate_research_notes.py  local_cleanup.py  ops_status.py  promote_research_draft.py  render_tradingview_alerts.py  send_sample_alert.py  tail_events.py
site/: events.html  events.json  index.html  journal.html  macro.html  research.html  strategy.html  watchlist.html  watchlist.json
tests/: test_alerts_api.py  test_check_public_output.py  test_check_tradingview_catalog.py  test_docker_compose_config.py  test_llm_analysis.py  test_llm_usage.py  test_local_cleanup.py  test_models_and_rules.py  test_ops_status.py  test_promote_research_draft.py  test_render_tradingview_alerts.py  test_research_note_generator.py  test_send_sample_alert.py  test_settings.py  test_site_build.py  test_tail_events.py  test_watchlist.py
(+40 files in other folders)
